opam-version: "1.2"
version: "0.1.2"
maintainer: "joyprophecy@gmail.com"
author: "joyprophecy@gmail.com"
homepage: "https://github.com/IndicriminateCoding/clarity"
bug-reports: "https://github.com/IndiscriminateCoding/clarity/issues"
dev-repo: "https://github.com/IndiscriminateCoding/clarity"
license: "BSD3"
available: [ ocaml-version >= "4.04.0" ]
depends: [ "jbuilder" ]
build: [
  [ "jbuilder" "build" ]
]
install: [
  [ "jbuilder" "install" ]
]
remove: [
  [ "jbuilder" "uninstall" ]
]
